<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskRecord</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用 户</string>
    <string name="pwd">密 码</string>
    <string name="repwd">请再输入密码</string>
    <string name="register">没有账号 点击注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="loginin">登录</string>
    <string name="registerinfor">注册</string>
    <string name="rememberpwd">记住密码</string>
    <string name="email">邮箱</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="title_activity_index">首页</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_maintab">MainTabActivity</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
     <string name="homedate">2016年5月</string>
     <string name="now">今</string>

</resources>
