<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >
	<!--  logo view -->
   <LinearLayout 
       android:id="@+id/logo"
       android:orientation="vertical"
       android:layout_marginTop="30dp"
       android:layout_gravity="center_horizontal"
       android:layout_width="200dp"
       android:layout_height="200dp"
       android:background="@drawable/circle"
       android:layout_marginBottom="30dp"
       ></LinearLayout>
	<!--  用户名view 输入用户名 -->
   <LinearLayout
       android:id="@+id/user"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
   >

       <EditText
           android:id="@+id/userNamea"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@drawable/edittext"
           android:textSize="20sp"
           android:singleLine="true"
           android:textColorHint="#ffffff"
           android:background="@null"
           android:drawableLeft="@drawable/usericon"
           android:hint="@string/username"
       />
       <View android:background="#EEEEE0"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
            />
   </LinearLayout>
   <!--  输入密码  -->
   <LinearLayout
       android:id="@+id/pass"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       >
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#ffffff"
            android:textColor="@drawable/edittext"
            android:drawableLeft="@drawable/pwd2"
            android:drawableRight="@drawable/forget"
            android:background="@null"
            android:textSize="20sp" />
         <View android:background="#EEEEE0"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
            />
   </LinearLayout>
   <!--  记住密码  -->
   <LinearLayout
       android:id="@+id/rember"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="55dp"
       android:layout_marginRight="50dp"
       android:layout_marginTop="3dp"
       >
       <CheckBox 
             android:id="@+id/rememberpwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:background="#fffccc"
             android:layout_weight="0"
             />
       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:textColor="#ffffff"
           android:textSize="17sp"
           android:text="@string/rememberpwd"
           android:layout_weight="1"
           />
    </LinearLayout>
   <!--  登录按钮 和 点击注册view -->
   <LinearLayout
        android:id="@+id/login"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
       <Button 
           android:id="@+id/loginbtn"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:text="@string/loginin"
           android:background="#FF6A6A"
           android:textColor="#ffffff"
           />
       <TextView 
        android:id="@+id/register"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        />
   </LinearLayout>
  
</LinearLayout>

</ScrollView>
